feat(canvas):done with the canvas

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
     "axios": "^1.13.5",
     "flow": "^0.2.3",
     "gsap": "^3.14.2",
+    "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.1.0",
     "next": "16.1.6",
     "react": "^19.2.3",
     "react-dom": "19.2.3"
