--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.1.0",
+    "lenis": "^1.3.17",
     "next": "16.1.6",
     "react": "^19.2.3",
     "react-dom": "19.2.3"
